<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="title_home">Home</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_my_music">My Music</string>
    <string name="title_settings">Settings</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_playlists">Playlists</string>
    <string name="bottom_navigation_favorites">Favorites</string>
    <string name="bottom_navigation_my_music">My Music</string>
    <string name="bottom_navigation_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
